[package]
name = "spectrobrowse"
version = "0.1.0"
authors = ["Roger Filmyer <roger.filmyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
plotters = "0.3.0"
rustfft = "5.0.1"
ndarray = "0.14.0"
ndarray-stats = "0.4.0"
colorous = "1.0.3"