[package]
name = "spectrobrowse"
version = "0.1.1"
authors = ["Roger Filmyer <spectrobrowse@synolect.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
plotters = "0.3.0"
colorous = "1.0.3"
rustfft = "5.0.1"
ndarray = "0.14.0"
ndarray-stats = "0.4.0"
rayon = "1.5.0"
eyre = "0.6.5"
clap = "2.33.0"
